@@ -3002,16 +3002,7 @@ JsVar *jswrap_banglejs_buzz(int time, JsVarFloat amt) {
   return jsvLockAgain(promiseBuzz);
 }
 
-/*JSON{
-    "type" : "staticmethod",
-    "class" : "Bangle",
-    "name" : "off",
-    "generate" : "jswrap_banglejs_off",
-    "ifdef" : "BANGLEJS"
-}
-Turn Bangle.js off. It can only be woken by pressing BTN1.
-*/
-void jswrap_banglejs_off() {
+static void jswrap_banglejs_periph_off() {
 #ifndef EMSCRIPTEN
   jsiKill();
   jsvKill();
@@ -3039,7 +3030,57 @@ void jswrap_banglejs_off() {
   nrf_gpio_cfg_sense_set(BTN3_PININDEX, NRF_GPIO_PIN_NOSENSE);
 #endif
   nrf_gpio_cfg_sense_set(BTN1_PININDEX, NRF_GPIO_PIN_SENSE_LOW);
+#else
+  jsExceptionHere(JSET_ERROR, ".off not implemented on emulator");
+#endif
+
+}
+
+/*JSON{
+    "type" : "staticmethod",
+    "class" : "Bangle",
+    "name" : "off",
+    "generate" : "jswrap_banglejs_off",
+    "ifdef" : "BANGLEJS"
+}
+Turn Bangle.js off. It can only be woken by pressing BTN1.
+*/
+void jswrap_banglejs_off() {
+#ifndef EMSCRIPTEN
+  jswrap_banglejs_periph_off();
   sd_power_system_off();
+#else
+  jsExceptionHere(JSET_ERROR, ".off not implemented on emulator");
+#endif
+}
+
+/*JSON{
+    "type" : "staticmethod",
+    "class" : "Bangle",
+    "name" : "softOff",
+    "generate" : "jswrap_banglejs_softOff",
+    "ifdef" : "BANGLEJS"
+}
+Turn Bangle.js (mostly) off, but keep the CPU in sleep
+mode until BTN1 is pressed to preserve the RTC (current time).
+*/
+void jswrap_banglejs_softOff() {
+#ifndef EMSCRIPTEN
+  // Wait if BTN1 is pressed until it is released
+  while (jshPinGetValue(BTN1_PININDEX));
+  jswrap_ble_sleep();
+  jswrap_banglejs_periph_off();
+  jshDelayMicroseconds(100000); // wait 100ms for any button bounce to disappear
+  IOEventFlags channel = jshPinWatch(BTN1_PININDEX, true);
+  if (channel!=EV_NONE) jshSetEventCallback(channel, jshHadEvent);
+  // keep sleeping until a button is pressed
+  while (!jshPinGetValue(BTN1_PININDEX)) {
+    jshKickWatchDog();
+    jshSleep(jshGetTimeFromMilliseconds(2*1000));
+  }
+  // restart
+  jshReboot();
+
 #else
   jsExceptionHere(JSET_ERROR, ".off not implemented on emulator");
 #endif
